clean up logging